--- a/.github/workflows/repo_report.yml
+++ b/.github/workflows/repo_report.yml
@@ -51,9 +51,8 @@ jobs:
             --header "Authorization: Bearer ${{ env.PAT_REPO_REPORT }}" \
             https://api.github.com/repos/${{ github.repository }} \
             | tee - \
-            | jq '{repo: "${{ github.repository }}", repo_id: ${{ steps.vars.outputs.REPO_ID }}, group: "${{ env.REPORT_GROUP }}", stars: .stargazers_count }' 
-            # \
-            #| curl -H "Content-Type: application/json" -X POST --data-binary @- ${{ env.ENDPOINT_REPO_REPORT }}/api/GitHubPublicStats
+            | jq '{repo: "${{ github.repository }}", repo_id: ${{ steps.vars.outputs.REPO_ID }}, group: "${{ env.REPORT_GROUP }}", stars: .stargazers_count }' \
+            | curl -H "Content-Type: application/json" -X POST --data-binary @- ${{ env.ENDPOINT_REPO_REPORT }}/api/GitHubPublicStats
           
       - name: get clones traffic
         if: ${{ env.PAT_REPO_REPORT != '' && env.ENDPOINT_REPO_REPORT != '' && env.REPORT_GROUP != '' }}
