--- a/.github/workflows/repo_report.yml
+++ b/.github/workflows/repo_report.yml
@@ -26,14 +26,28 @@ jobs:
       REPORT_GROUP: ${{ secrets.GROUP_REPO_REPORT }}
       
     steps:
-      - name: get public stats
+       
+      - name: set output vars
+        id: vars
         run: |
-            curl \
+          META_DATA=$(curl \
             --header "Accept: application/vnd.github+json" \
             --header "Authorization: Bearer ${{ env.PAT_REPO_REPORT }}" \
-            https://api.github.com/repos/${{ github.repository }} \
-            | tee - \
-            | jq '{repo: "${{ github.repository }}", repo_id: ${{ steps.vars.outputs.REPO_ID }}, group: "${{ env.REPORT_GROUP }}", stars: .stargazers_count }' \
+            https://api.github.com/repos/${{ github.repository }})
+            
+          REPO_ID=$(echo $META_DATA | jq '.id')
+          REPO_STARS=$(echo $META_DATA | jq '.stargazers_count')
+          REPO_WATCHERS=$(echo $META_DATA | jq '.watchers_count')
+          REPO_FORKS=$(echo $META_DATA | jq '.forks_count')
+          
+          echo "REPO_ID=${REPO_ID}" >> $GITHUB_OUTPUT
+          echo "REPO_STARS=${REPO_STARS}" >> $GITHUB_OUTPUT
+          echo "REPO_WATCHERS=${REPO_WATCHERS}" >> $GITHUB_OUTPUT
+          echo "REPO_FORKS=${REPO_FORKS}" >> $GITHUB_OUTPUT
+          
+      - name: get public stats
+        run: |
+            jq '{repo: "${{ github.repository }}", repo_id: ${{ steps.vars.outputs.REPO_ID }}, group: "${{ env.REPORT_GROUP }}", stars: ${{ steps.vars.outputs.REPO_STARS }} }' \
             | curl -H "Content-Type: application/json" -X POST --data-binary @- ${{ env.ENDPOINT_REPO_REPORT }}/api/GitHubPublicStats
           
       - name: get clones traffic
